alpha-0.1.13 - fixed visualization on Firefox and Edge

--- a/public/css/wpvacancy-public-maps.css
+++ b/public/css/wpvacancy-public-maps.css
@@ -8,8 +8,13 @@
   position: relative;
 }
 
-.wpv-booking-accommodations-map {
+.wpv-booking-accommodations-map-wrapper {
   flex: 1;
+  width: 100%;
+  min-width: 100%;
+}
+
+.wpv-booking-accommodations-map {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
